--- a/src/views/artists.ejs
+++ b/src/views/artists.ejs
@@ -22,6 +22,7 @@
         position: relative;
         max-width: 600px;
         margin: 0 auto;
+        border-radius: 1%;
     }
 
     .search-input {
@@ -47,6 +48,7 @@
         position: absolute;
         right: 1.5rem;
         top: 50%;
+        border-radius: 100%;
         transform: translateY(-50%);
         width: 24px;
         height: 24px;
