--- a/src/views/artists.ejs
+++ b/src/views/artists.ejs
@@ -55,12 +55,12 @@
         opacity: 0.5;
     }
 
-    .recent-artists {
+    .recommended-artists {
         margin-top: 3rem;
         padding: 0 2rem;
     }
 
-    .recent-artists h2 {
+    .recommended-artists h2 {
         color: white;
         font-size: 1.25rem;
         margin-bottom: 1.5rem;
@@ -157,8 +157,8 @@
         </div>
     </div>
 
-    <div class="recent-artists">
-        <h2>Your recent artists</h2>
+    <div class="recommended-artists">
+        <h2>Your recommended artists</h2>
         <ul class="artists-grid">
             <li class="artist-item">
                 <div class="artist-image-container">
