--- a/src/views/artists.ejs
+++ b/src/views/artists.ejs
@@ -147,90 +147,38 @@
 
 <div class="container">
     <div class="search-section">
-        <h1>Who do you want to listen today?</h1>
+        <h1>Who do you want to listen to today?</h1>
         <div class="search-bar">
-            <input type="text" class="search-input" placeholder="Search for artists...">
-            <svg class="search-icon" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-                <circle cx="11" cy="11" r="8"></circle>
-                <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-            </svg>
+            <form action="/" method="GET">
+                <input 
+                    type="text" 
+                    class="search-input" 
+                    name="search"
+                    placeholder="Search for artists..." 
+                    value="<%= searchQuery %>"
+                >
+                <svg class="search-icon" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                </svg>
+            </form>
         </div>
     </div>
 
     <div class="recommended-artists">
-        <h2>Your recommended artists</h2>
+        <h2>Recommended for you</h2>
         <ul class="artists-grid">
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Taylor Swift" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Taylor Swift</p>
-            </li>
-            <!-- Repeat for other artists -->
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Ed Sheeran" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Ed Sheeran</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="The Weeknd" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">The Weeknd</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Billie Eilish" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Billie Eilish</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Drake" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Drake</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Ariana Grande" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Ariana Grande</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Justin Bieber" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Justin Bieber</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Lady Gaga" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Lady Gaga</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Post Malone" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Post Malone</p>
-            </li>
-            <li class="artist-item">
-                <div class="artist-image-container">
-                    <img src="/images/profile-pic.jpg" alt="Dua Lipa" class="artist-image">
-                    <div class="artist-overlay"></div>
-                </div>
-                <p class="artist-name">Dua Lipa</p>
-            </li>
+            <% artists.forEach(artist => { %>
+                <li class="artist-item">
+                    <div class="artist-image-container">
+                        <img src="<%= artist.imageUrl %>" alt="<%= artist.name %>" class="artist-image">
+                        <div class="artist-overlay"></div>
+                    </div>
+                    <p class="artist-name"><%= artist.name %></p>
+                </li>
+            <% }); %>
         </ul>
     </div>
+    
 </div>
+
