changed mp3 path

--- a/src/views/tracks.ejs
+++ b/src/views/tracks.ejs
@@ -2,7 +2,7 @@
 <h2>Recommended Tracks</h2>
 <ul>
     <% tracks.forEach(track => { %>
-        <li><a href="#" onclick="playTrack('<%= track.track_mp3_path %>')">
+        <li><a href="#" onclick="playTrack('/music/<%= track.track_mp3_path %>')">
                 <%= track.track_title %> - <%= track.artist_name %>
             </a></li>
         <% }) %>
