--- a/src/public/css/player.css
+++ b/src/public/css/player.css
@@ -3,18 +3,59 @@
 	color: #ffffff;
 	display: flex;
 	justify-content: space-between;
-	padding: 15px;
+	padding: 5px;
 	position: fixed;
-	height: 5%;
+	height: 10%;
 	bottom: 0;
 	width: 100%; /* Footer accounts for the sidebar width */
 	left: 0; /* Footer aligns with the sidebar */
+	gap: 15%;
 }
 
+.player-song-info {
+	display: flex;
+	flex-direction: row;
+	width: 25%;
+	margin: 0;
+	gap: 15px;
+	padding: 10px;
+}
+
+.player-song-details {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+.player-album-img {
+	border-radius: 50%;
+}
+
+.player-controls {
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+}
+
+.player-control-btn {
+	margin: auto;
+}
 .player-controls button {
 	background-color: #333;
 	border: none;
 	padding: 10px 20px;
 	color: white;
-	margin-left: 5px;
+	cursor: pointer;
+}
+
+.player-volume {
+	width: 25%;
+	margin: auto;
+}
+.player-volume input {
+	cursor: pointer;
+}
+
+.progress-bar input {
+	width: 100%;
+	cursor: pointer;
 }
