--- a/src/views/tracks.ejs
+++ b/src/views/tracks.ejs
@@ -1,9 +1,12 @@
 <!-- views/tracks.ejs -->
 <h2>Recommended Tracks</h2>
 <ul>
-    <% tracks.forEach(track => { %>
-        <li><a href="#" onclick="playTrack('/music/<%= track.track_mp3_path %>')">
+    <% tracks.forEach(track=> { %>
+        <li>
+            <a href="#"
+                onclick="playTrack('/music/<%= track.track_mp3_path %>', '<%= track.track_title %>', '<%= track.artist_name %>')">
                 <%= track.track_title %> - <%= track.artist_name %>
-            </a></li>
+            </a>
+        </li>
         <% }) %>
 </ul>
