update blank bottom to show all content in page

--- a/src/views/container.ejs
+++ b/src/views/container.ejs
@@ -23,6 +23,7 @@
                     <%- include(view) %> <!-- Nội dung thay đổi trong đây -->
                 </div>
             </div>
+            <div id="blank"></div>
         </div>
         
         <!-- Phần thanh progres nhạc -->
