use EJS instead of JS to load artist cards

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -23,6 +23,16 @@
             <h1>Artists You May Like</h1>
             <div class="artist-display" id="artistDisplay">
                 <!-- Artist cards will be generated here -->
+                <% for(let i=0; i < 10; i++){ %>
+                    <div class="artist-card">
+                        <a href="/api/artist/<%= artists[i].artist_id %>"> 
+                            <img src="<%= artists[i].artist_pic_path %>" alt="<%= artists[i].artist_name %>">
+                            <p>
+                                <%= artists[i].artist_name %>
+                            </p>
+                        </a>
+                    </div>
+                <% } %>
             </div>
         </div>
     </div>
