--- a/src/public/css/homepage.css
+++ b/src/public/css/homepage.css
@@ -172,3 +172,8 @@ html {
 	border-top-right-radius: 8px;
 	border-radius: 100%;
 }
+
+.artist-card a {
+	text-decoration: none;
+	color: var(--main-text-color);
+}
