--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -4,7 +4,7 @@
         <img src="/images/pinterest_profile_image.png" alt="Logo" height="70px">
     </div>
     <ul>
-        <li><a href="/" class="side-link" active><i class="bi bi-house-door-fill"></i>Home</a></li>
+        <li><a href="/home" class="side-link" active><i class="bi bi-house-door-fill"></i>Home</a></li>
         <li><a href="#" class="side-link"><i class="bi bi-search"></i>Search</a></li>
         <li><a href="#" class="side-link"><i class="bi bi-collection-play-fill"></i>Library</a></li>
     </ul>
