--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -17,3 +17,18 @@
 
     </ul>
 </aside>
+
+<script>
+    sideLinks = document.querySelectorAll(".side-link")
+
+    sideLinks.forEach(link => {
+        console.log(link)
+        link.addEventListener('click', function () {
+            sideLinks.forEach(link => {
+                link.removeAttribute('active')
+            });
+            this.setAttribute('active', '')
+            console.log(this.getAttributeNames())
+        })
+    });
+</script>
