--- a/src/views/vWtracks/tracks.ejs
+++ b/src/views/vWtracks/tracks.ejs
@@ -1,12 +1,24 @@
-<!-- views/tracks.ejs -->
-<h2>Recommended Tracks</h2>
-<ul>
-    <% tracks.forEach(track=> { %>
-        <li>
-            <a href="#"
-                onclick="playTrack('/music/<%= track.track_mp3_path %>', '<%= track.track_title %>', '<%= track.artist_name %>')">
-                <%= track.track_title %> - <%= track.artist_name %>
-            </a>
-        </li>
-        <% }) %>
-</ul>
+<div class="container">
+    <h2>Recommended Tracks</h2>
+    <ul class="tracks-grid">
+        <% tracks.forEach(track => { %>
+            <li class="track-item">
+                <a href="#" onclick="playTrack('/music/<%= track.track_mp3_path %>')" class="track-link">
+                    <div class="track-image-container">
+                        <img 
+                            src="/api/placeholder/400/400"
+                            alt="<%= track.track_title %>"
+                            class="track-image">
+                        <div class="track-overlay">
+                            <i class="bi bi-play-circle play-icon"></i>
+                        </div>
+                    </div>
+                    <div class="track-info">
+                        <h3 class="track-title"><%= track.track_title %></h3>
+                        <p class="artist-name"><%= track.artist_name %></p>
+                    </div>
+                </a>
+            </li>
+        <% }); %>
+    </ul>
+</div>
