--- a/src/public/css/tracks.css
+++ b/src/public/css/tracks.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /*margin-bottom: 3rem;*/
+    margin-bottom: 3rem;
     padding: 0 1rem;
 }
 
