--- a/src/views/vWtracks/tracks.ejs
+++ b/src/views/vWtracks/tracks.ejs
@@ -13,7 +13,7 @@
         <ul class="tracks-grid">
             <% tracks.forEach(track => { %>
                 <li class="track-item">
-                    <a href="#" onclick="playTrack('/music/<%= track.track_mp3_path %>')" class="track-link">
+                    <a href="#" onclick="playTrack('/music/<%= track.track_mp3_path %>', '<%= track.track_title %>', '<%= track.artist_name %>')" class="track-link">
                         <div class="track-image-container">
                             <img 
                                 src="/api/placeholder/400/400"
@@ -29,6 +29,7 @@
                         </div>
                     </a>
                 </li>
+                
             <% }); %>
         </ul>
     </div>
