--- a/src/views/vWtracks/tracks.ejs
+++ b/src/views/vWtracks/tracks.ejs
@@ -15,10 +15,12 @@
                 <li class="track-item">
                     <a href="#" onclick="playTrack('/music/<%= track.track_mp3_path %>', '<%= track.track_title %>', '<%= track.artist_name %>')" class="track-link">
                         <div class="track-image-container">
+                            <!-- Default image that will be replaced by JavaScript -->
                             <img 
-                                src="/api/placeholder/400/400"
+                                src="/images/albums/default.jpg"
                                 alt="<%= track.track_title %>"
-                                class="track-image">
+                                class="track-image"
+                                data-title="<%= track.track_title %>">
                             <div class="track-overlay">
                                 <i class="bi bi-play-circle play-icon"></i>
                             </div>
@@ -29,6 +31,7 @@
                         </div>
                     </a>
                 </li>
+                
                 
             <% }); %>
         </ul>
