--- a/src/views/vWtracks/tracks.ejs
+++ b/src/views/vWtracks/tracks.ejs
@@ -4,7 +4,7 @@
     <% tracks.forEach(track=> { %>
         <li>
             <a href="#"
-                onclick="playTrack('/music/<%= track.track_mp3_path %>', '<%= track.track_title %>', '<%= track.artist_name %>')">
+                onclick="playTrack('<%= track.track_mp3_path %>', '<%= track.track_title %>', '<%= track.artist_name %>')">
                 <%= track.track_title %> - <%= track.artist_name %>
             </a>
         </li>
