--- a/src/views/vwArtists/artist_home.ejs
+++ b/src/views/vwArtists/artist_home.ejs
@@ -98,73 +98,38 @@
 
     <div class="artist-header">
         <!-- Artist Picture -->
-        <img src="/images/profile-pic.jpg" alt="User  Avatar">
+        <img src="<%= artist.artist_pic_path %>" alt="<%= artist.artist_name %>">
         <!-- Artist Name Overlay -->
-        <h1>Artist Name</h1>
+        <h1><%= artist.artist_name %></h1>
+    </div>
+
+    <div>
+        <h2>Albums</h2>
+        <ul>
+            <% albums.forEach(album => { %>
+                <li>
+                    <!-- Call to artist's albums page -->
+                    <a href="/artist/<%= artist.artist_id %>/album/<%= album.album_id %>">
+                        <img src="<%= album.album_cover_image %>" alt="<%= album.album_name %>" height="100px"><%= album.album_name %>
+                    </a>
+                </li>
+            <% }); %>
+        </ul>
     </div>
 
     <div class="songs-list">
         <h2>Songs</h2>
-        <ul id="song-list">
-            <li>Song Name 1 - Album Name 1 - 3:45</li>
-            <li>Song Name 2 - Album Name 2 - 4:05</li>
-            <li>Song Name 3 - Album Name 3 - 2:30</li>
-            <li>Song Name 4 - Album Name 4 - 3:15</li>
-            <li>Song Name 5 - Album Name 5 - 4:20</li>
-            <li>Song Name 6 - Album Name 6 - 2:50</li>
-            <li>Song Name 7 - Album Name 7 - 3:40</li>
-            <li>Song Name 8 - Album Name 8 - 4:10</li>
-            <li>Song Name 9 - Album Name 9 - 2:45</li>
-            <li>Song Name 10 - Album Name 10 - 3:30</li>
+        <ul id="artist-home-song-list">
+            <% tracks.forEach(track => { %>
+                <li>
+                    <a href="#" class="song-link"
+                        data-mp3-path="<%= track.track_mp3_path %>" 
+                        data-title="<%= track.track_title %>" 
+                        data-artist="<%= track.artist_name %>">
+                    <%= track.track_title %>
+                    </a>
+                </li>
+            <% }); %>
         </ul>
-        <button id="more-button" style="display: none;">More</button>
-    </div>
-
-    <div class="playlist-display">
-        <!-- Artist Card Example -->
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 1">
-            <p>Artist Name 1</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 2">
-            <p>Artist Name 2</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 3">
-            <p>Artist Name 3</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 4">
-            <p>Artist Name 4</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 5">
-            <p>Artist Name 5</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 6">
-            <p>Artist Name 6</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 7">
-            <p>Artist Name 7</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 8">
-            <p>Artist Name 8</p>
-        </div>
-        <div class="playlist-card">
-            <img src="/images/profile-pic.jpg" alt="Artist Name 9">
-            <p>Artist Name 9</p>
-        </div>
-
-        <!-- Add more artist cards as needed -->
-    </div>
-
-    <div class="artist-description">
-        <h2>About the Artist</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro assumenda facilis nisi reiciendis ducimus dolorum, animi sapiente hic facere impedit ex veniam blanditiis quo sint consequatur distinctio omnis? Repellat, ratione.</p>
     </div>
 </div>
-<script src="./"
