--- a/src/views/vWtracks/tracks.ejs
+++ b/src/views/vWtracks/tracks.ejs
@@ -3,8 +3,11 @@
 <ul>
     <% tracks.forEach(track=> { %>
         <li>
-            <a href="#"
-                onclick="playTrack('<%= track.track_mp3_path %>', '<%= track.track_title %>', '<%= track.artist_name %>')">
+            <a href="#" class="song-link"
+                data-mp3-path="<%= track.track_mp3_path %>"
+                data-title="<%= track.track_title %>"
+                data-artist="<%= track.artist_name %>"
+            >
                 <%= track.track_title %> - <%= track.artist_name %>
             </a>
         </li>
