display username on navbar and homepage

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -13,12 +13,12 @@
     <div class="dropdown navbar-right">
         <button class="dropbtn" onclick="dropdown()">
             <img src="/images/profile-pic.jpg" alt="avatar" id="avatar">
-            <span class="username">Username</span>
+            <span class="username"><%= username %></span>
         </button>
         <div class="dropdown-content" id="dropdown-profile">
             <a href="#">Account</a>
             <a href="#">Profile</a>
-            <a href="#">Logout</a>
+            <a href="/logout">Logout</a>
         </div>
     </div>
 
