--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -7,7 +7,7 @@
         <div class="top-header">
             <div class="header-left">
                 
-                <h1>Welcome, username</h1>
+                <h1>Welcome, <%= username %></h1>
             </div>
         </div>
 
