changed upload btn to a link

--- a/src/views/vWtracks/tracks.ejs
+++ b/src/views/vWtracks/tracks.ejs
@@ -2,10 +2,10 @@
 <link rel="stylesheet" href="/css/tracks.css">
 <div class="container">
     <div class="header-section">
-        <button class="upload-btn">
+        <a href="/tracks/upload" class="upload-btn">
             <i class="bi bi-cloud-upload upload-icon"></i>
             Upload Music
-        </button>
+        </a>
     </div>
 
     <!-- Liked Tracks Section -->
