--- a/src/public/css/tracks.css
+++ b/src/public/css/tracks.css
@@ -16,6 +16,7 @@
 }
 
 .upload-btn {
+	text-decoration: none;
     background: rgba(168, 85, 247, 0.2);
     color: white;
     border: 2px solid rgba(168, 85, 247, 0.5);
