--- a/src/views/vWtracks/upload.ejs
+++ b/src/views/vWtracks/upload.ejs
@@ -1,8 +1,33 @@
-<form action="" method="post" enctype="multipart/form-data">
+<!-- Just making this looks good, dont reuse -->
+<style>
+    form{
+        padding: 25px;
+    }
+    form fieldset{
+        display: flex;
+        flex-direction: column;
+    }
+    form fieldset *{
+        padding: 5px;
+    }
+</style>
 
+
+<form action="" method="post" enctype="multipart/form-data">
     <fieldset>
-        <label for="mp3-upload">Choose mp3 file</label>
-        <input type="file" name="mp3_file" id="mp3-upload" accept="audio/*">
+        <legend>Input file info</legend>
+        <div>
+            <label for="upload-track-name">Track name</label>
+            <input type="text" id="upload-track-name">
+        </div>
+        <div>
+            <label for="mp3-upload">Choose mp3 file</label>
+            <input type="file" name="mp3_file" id="mp3-upload" accept="audio/*">
+        </div>
+        <label for="upload-lyrics">Lyrics</label>
+        <textarea name="upload-lyrics" id="upload-lyrics" rows="30"></textarea>
     </fieldset>
+
+    <button type="submit">Upload</button>
 
 </form>
