update name for track title field

--- a/src/views/vWtracks/upload.ejs
+++ b/src/views/vWtracks/upload.ejs
@@ -18,7 +18,7 @@
         <legend>Input file info</legend>
         <div>
             <label for="upload-track-name">Track name</label>
-            <input type="text" id="upload-track-name">
+            <input type="text" id="upload-track-name" name="upload_track_name">
         </div>
         <div>
             <label for="mp3-upload">Choose mp3 file</label>
